<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/edit_location"
            style="@style/Base.V7.Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_location"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/primary_light"/>
    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/thing_statement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_thing"
                android:shadowColor="@color/primary_light"
                android:textColor="@color/primary_text"
                android:textColorHighlight="@color/primary_light"
                android:textColorHint="@color/primary_light"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/spend_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_spend_money"
            android:inputType="number"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/primary_light"/>
    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/spend_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_spend_time"
                android:text="20"
                android:inputType="number"
                android:textColor="@color/primary_text"
                android:textColorHighlight="@color/primary_light"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/start_time_flag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/input_start_time"
                android:textColor="@color/primary_dark"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/accent"
                android:textSize="21sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>