<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/annonation_warning"
        android:textColor="@color/accent"
        android:textSize="10sp"/>
<android.support.v7.widget.CardView
    android:layout_margin="5dp"
    android:elevation="1dp"
    app:cardCornerRadius="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/go_out_by_bycycle"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="80dp">
        <ImageView
            android:src="@mipmap/bycircle_picture"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="cursive"
            android:gravity="center"
            android:lineSpacingExtra="10sp"
            android:text="@string/use_bycircle"
            android:textColor="@color/pickerview_timebtn_pre"
            android:textSize="14sp"
            android:typeface="sans"/>
    </LinearLayout>
</android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:elevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/go_out_by_car"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <ImageView
                android:src="@mipmap/taxi_picture"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="cursive"
                android:gravity="center"
                android:lineSpacingExtra="10sp"
                android:text="@string/use_car_or_taxi"
                android:textColor="@color/pickerview_timebtn_pre"
                android:textSize="14sp"
                android:typeface="sans"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_margin="5dp"
        android:elevation="1dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/go_out_by_bus"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="80dp">
            <ImageView
                android:src="@mipmap/bus_picture"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:fontFamily="cursive"
                android:gravity="center"
                android:lineSpacingExtra="10sp"
                android:text="@string/use_public_tool"
                android:textColor="@color/pickerview_timebtn_pre"
                android:textSize="14sp"
                android:typeface="sans"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>