<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    android:layout_margin="3dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@android:color/holo_blue_bright"
                android:contentDescription="@string/route_line"/>
        </FrameLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="12"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/way_fee_layout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="3dp"
                    android:layout_margin="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:lineSpacingExtra="8sp"
                        android:padding="1dp"
                        android:text="@string/fee"
                        android:textColor="@color/icons"
                        android:typeface="monospace"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:gravity="start|center"
                    android:id="@+id/fee_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="3dp"
                    android:layout_margin="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:lineSpacingExtra="8sp"
                        android:padding="1dp"
                        android:text="@string/cost_time"
                        android:textColor="@color/icons"
                        android:typeface="monospace"/>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/cost_time_show"
                    android:gravity="start|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="3dp"
                    android:layout_margin="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/holo_orange_light"
                        android:lineSpacingExtra="8sp"
                        android:padding="1dp"
                        android:text="@string/go_way"
                        android:textColor="@color/icons"
                        android:typeface="monospace"/>
                </android.support.v7.widget.CardView>
                <TextView
                    android:id="@+id/go_way_show"
                    android:gravity="start|center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@android:color/darker_gray"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>